# Ftrace

./: .gitignore  .gitlab-ci.yml  .plumignore  CMakeLists.txt  Makefile  README.md  sonar-project.properties
include/: ftrace.h  map.h  memory_map.h  syscalls.h
src/: call_near_absolute.c  call_near_relative.c  elf_utils.c  find_function_name.c  find_library.c  ftrace.c  main.c  map_utils.c  memory_map_utils.c  print_syscall.c  print_utils.c  signal.c
